Release history for Dist-Zilla-Plugin-Prereqs-Soften

{{$NEXT}}
 [Dependencies::Stats]
 - Dependencies changed since 0.005001, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: +10 ↑2 -3 (recommends: +1, suggests: ↑2)
 - runtime: ↓1 (recommends: +1 -1)
 - test: +1 (recommends: ↑1 ↓1)

0.005001 2014-09-29T14:03:18Z
 [Bugfix]
 - Dont fail with newer OptionalFaetures due to test subsequently needing a Makefile.PL to work

 [Dependencies::Stats]
 - Dependencies changed since 0.005000, see misc/*.deps* for details
 - develop: (suggests: ↑1)
 - test: (recommends: +1)

0.005000 2014-09-10T22:29:32Z
 [00 Minor]
 - Internals tweaked to be more modern
 - Metadata updated
 - Tests simplified.

 [Dependencies::Stats]
 - Dependencies changed since 0.004002, see misc/*.deps* for details
 - develop: +1 ↑1 (suggests: ↑2)
 - runtime: +1
 - test: +1 -3 (recommends: ↑1)

 [Internals]
 - dump_config implemented with DZU:ConfigDumper

 [Metadata]
 - Author = kentnl

 [Tests]
 - internal lib/dztest now nuked in favour of DZPT:KENTNL:dztest, which was inspired by this code.

0.004002 2014-08-15T21:18:48Z
 [00 Trivial]
 - CPANDAY!
 - whitespace adjusted

 [Dependencies::Stats]
 - Dependencies changed since 0.004001, see misc/*.deps* for details
 - develop: (suggests: ↑1)

 [Misc]
 - Improve source side POD to reduce build side whitespace.

0.004001 2014-08-15T02:20:05Z
 [00 Trivial]
 - Testing code reworked to avoid need for a hard dependency on any JSON module.

 [Dependencies::Stats]
 - Dependencies changed since 0.004000, see misc/*.deps* for details
 - configure: ↓1 (recommends: ↑1)
 - develop: +4 -3 (suggests: +2 -1)
 - test: +1 -4 (recommends: ↑2 -1)

 [Misc]
 - Repository moved to kentnl org

 [Tests]
 - use dzil distmeta for prereqs instead of sloshing through JSON ( GH #2, reported by ETHER )
 - most tests cleaned slightly
 - report versions test updated.

0.004000 2014-03-23T13:16:51Z
 [00 Minor]