@@ -8,6 +8,11 @@ Release history for Dist-Zilla-Plugin-Prereqs-Soften
  - runtime: ↓1 (recommends: +1 -1)
  - test: +1 (recommends: ↑1 ↓1)
 
+ [Features]
+ - Can now specify to_relationship = none. This is useful in conjunction with copy_to to move phases. Its admittedly
+   awkward syntax, but I need to re-write half the internals now because YAGNI made them too simple earlier, and now
+   IGNI.
+
 0.005001 2014-09-29T14:03:18Z
  [Bugfix]
  - Dont fail with newer OptionalFaetures due to test subsequently needing a Makefile.PL to work
